...
  override func loadView() {
    super.loadView()
    addGestures()
    addSubviews()
    configureViewLayout()
    title = "Swift POP Form"
    let rightBarButton = UIBarButtonItem(title: "Validate", style: .plain, target: self, action: #selector(onValidationTap))
    navigationItem.setRightBarButton(rightBarButton, animated: false)
  }

  private func addGestures(){
    let tgr = UITapGestureRecognizer(target: self, action: #selector(onEndEditTap))
    view.addGestureRecognizer(tgr)
...
  }

  func formWasInvalid() {}

  func formWasValid(callback: Credentials) {
    print(callback)
    let ac = UIAlertController(title: "All Fields Done Gone Valid", message: "POP", preferredStyle: .alert)
    let action = UIAlertAction(title: "Rad!", style: .destructive, handler: nil)
    ac.addAction(action)
    present(ac, animated: true, completion: nil)
  }

  func formChangedEditingStatus(keyboardOriginDelta: CGFloat, animationOptions: UIView.AnimationOptions, duration: Double) {
...
