...

private struct Birthday_Field: PopFormFieldDataSource {
  var prefilledText: String?

  var theme: PopFormFieldTheme = TextFieldTheme()

  var placeholder: String = "Birthday"

  var apiKey: String = "birthday"

  var validationRule: [Rule]? = [MinDateRule(years: 18, message: "Must be 18 or older", dateFormat:  "dd.MM.yy")]

  var returnKey: UIReturnKeyType?
...
